--- a/css/index.css
+++ b/css/index.css
@@ -5,17 +5,19 @@
 
 body {
     background: black;
+    overflow-x: hidden;
+    height: 279vw; /* 전체 body의 높이 */
 }
 
 /* 아래의 모든 코드는 영역::코드로 사용 */
 body::-webkit-scrollbar {
-    width: 10px;  /* 스크롤바의 너비 */
+    width: 0.6vw;  /* 스크롤바의 너비 */
 }
 
 body::-webkit-scrollbar-thumb {
-    height: 100px; /* 스크롤바의 길이 */
+    height: 3vw; /* 스크롤바의 길이 */
     background: #ffffff; /* 스크롤바의 색상 */
-    border-radius: 10px;
+    border-radius: 1vw;
 }
 
 body::-webkit-scrollbar-track {
@@ -35,18 +37,46 @@ a {
 }
 
 
+#topBtn {
+    width: 3vw;
+    height: 3vw;
+    display: none;
+    position: fixed;
+    bottom: 2vw;
+    right: 2vw;
+    z-index: 1;
+    font-size: 0.8vw;
+    border: none;
+    outline: none;
+    color: #ffffff;
+    font-weight: bold;
+    cursor: pointer;
+    padding: 0.3vw;
+    border-radius: 6vw;
+    border: 0.1vw solid #ffffff;
+    background-color: transparent;
+}
+
+
 /*--header-------------------------------------------------*/
 
 header {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 80px;
+    height: 6vw;
     display: flex;
-    border-bottom: 1px solid #fff;
+    border-bottom: 0.1vw solid #fff;
     color: #fff;
+    background-color: #000000af;
+    z-index: 4;
+    transition: transform 0.3s ease; /* 트랜지션 추가 */
+    transform: translateY(0);
 }
 
 .logo {
-    padding: 0 25px;
+    padding: 0 1.3vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -60,16 +90,16 @@ header {
 }
 
 .logo span {
-    width: 1px;
-    border: 2.9px solid rgb(255, 255, 255);
-    margin-top: -9px;
-    margin-left: -55px;
+    width: 0.1vw;
+    border: 0.11vw solid rgb(255, 255, 255);
+    margin-top: -0.5vw;
+    margin-left: -2.9vw;
 }
 
 .logo:hover span {
-    width: 100px;
+    width: 5vw;
     transition: all 0.2s ease;
-    margin-left: 45px;
+    margin-left: 2.5vw;
 }
 
 /*--nav--------------*/
@@ -91,14 +121,20 @@ nav ul {
 
 nav ul li {
     padding: 0 70px 0 0;
-    font-size: 20px;
+    font-size: 1.4vw;
     font-weight: bold;
 }
 
 nav ul li:hover {
     font-weight: bold;
-    font-size: 25px;
+    text-decoration: line-through;
 }
+
+
+.hide {
+    transform: translateY(-100%);
+    transition: transform 0.3s ease-in-out;
+  }
 
 
 /*--section main-------------------------------------------------*/
@@ -112,19 +148,501 @@ nav ul li:hover {
     justify-content: center;
     text-align: center;
 }
+
+
 .main p {
-    color: #fff;
-    font-size: 200px;
+    width: 62.6vw;
+    color: #ffffff;
+    font-size: 8.5vw;
     font-weight: bold;
+
+    margin-top: -15%;
+    margin-left: 1%;
+    /* color: transparent;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb(255, 255, 255); */
 }
 
-/*--section about me-------------------------------------------------*/
+
+
+/*-- main skill ------*/
+
+
+#main {
+    margin-top: 5.9vw;
+}
+
+
+/*ES5*/
+.skill1 {
+    /* 위치를 고정시킵니다 */
+    position: absolute;
+    width: 23vw;
+    height: 12.5vw;
+    color: #ffffff;
+    background-color: #1D1D1D;
+    border: solid 0.15vw #ffffff;
+    border-radius: 0.5vw;
+
+    margin-top: -17%;
+    margin-left: -47%;
+}
+
+
+.ms1t {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 95%;
+    height: 20%;
+    border-bottom: solid 1px #ffffff;
+    margin-left: 0.7vw;
+}
+
+
+.ms1t h1 {
+    font-size: 1.1vw;
+    margin-left: 0.5vw;
+}
+
+.ms1t p {
+    font-size: 0.75vw;
+    margin-left: 0.5vw;
+}
+
+.ms1t ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    height: 100%;
+    margin-left: 5vw;
+}
+
+.ms1t ul li {
+    display: flex;
+    margin-right: 0.3vw;
+    list-style-type: none;
+}
+
+
+.ms1t ul li img {
+    width: 1.2vw;
+    height: 1.2vw;
+}
+
+
+.ms1b {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ms1b h1 {    
+    margin-top: -2vw;
+    font-size: 3.5vw;
+}
+
+
+
+/*Javascript*/
+.skill2 {
+    /* 위치를 고정시킵니다 */
+    position: absolute;
+    width: 23vw;
+    height: 12.5vw;
+    color: #ffffff;
+    background-color: #1D1D1D;
+    border: solid 0.15vw #ffffff;
+    border-radius: 0.5vw;
+
+    margin-top: -3%;
+    margin-left: -35%;
+}
+
+
+.ms2b {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ms2b h1 {    
+    margin-top: -2vw;
+    font-size: 3.5vw;
+}
+
+
+.ms2t {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 95%;
+    height: 20%;
+    border-bottom: solid 1px #ffffff;
+    margin-left: 0.7vw;
+}
+
+
+.ms2t ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    height: 100%;
+    margin-left: 5vw;
+}
+
+.ms2t ul li {
+    display: flex;
+    margin-right: 0.3vw;
+    list-style-type: none;
+}
+
+
+.ms2t ul li img {
+    width: 1.2vw;
+    height: 1.2vw;
+}
+
+
+
+/*HTML5*/
+.skill3 {
+     /* 위치를 고정시킵니다 */
+     position: absolute;
+    width: 23vw;
+    height: 12.5vw;
+    color: #ffffff;
+    background-color: #1D1D1D;
+    border: solid 0.15vw #ffffff;
+    border-radius: 0.5vw;
+
+    margin-top: -32%;
+    margin-left: -25%;
+     /* transition을 추가하여 부드러운 애니메이션 효과를 줍니다 */
+     transition: width 0.5s, height 0.5s, font-size 0.5s; 
+}
+
+
+.ms3b {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ms3b h1 {    
+    margin-top: -2vw;
+    font-size: 3.5vw;
+}
+
+
+.ms3t {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 95%;
+    height: 20%;
+    border-bottom: solid 1px #ffffff;
+    margin-left: 0.7vw;
+}
+
+
+.ms3t ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    height: 100%;
+    margin-left: 5vw;
+}
+
+.ms3t ul li {
+    display: flex;
+    margin-right: 0.3vw;
+    list-style-type: none;
+}
+
+
+.ms3t ul li img {
+    width: 1.2vw;
+    height: 1.2vw;
+}
+
+
+
+/*CSS*/
+.skill4 {
+    /* 위치를 고정시킵니다 */
+    position: absolute;
+    width: 23vw;
+    height: 12.5vw;
+    color: #ffffff;
+    background-color: #1D1D1D;
+    border: solid 0.15vw #ffffff;
+    border-radius: 0.5vw;
+
+    margin-top: -20%;
+    margin-left: 1.3%;
+
+    z-index: 2;
+}
+
+
+.ms4b {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ms4b h1 {     
+    margin-top: -2vw;
+    font-size: 3.5vw;
+}
+
+
+.ms4t {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 95%;
+    height: 20%;
+    border-bottom: solid 1px #ffffff;
+    margin-left: 0.7vw;
+}
+
+
+.ms4t ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    height: 100%;
+    margin-left: 5vw;
+}
+
+.ms4t ul li {
+    display: flex;
+    margin-right: 0.3vw;
+    list-style-type: none;
+}
+
+
+.ms4t ul li img {
+    width: 1.2vw;
+    height: 1.2vw;
+}
+
+
+
+/*React.js*/
+.skill5 {
+     /* 위치를 고정시킵니다 */
+    position: absolute;
+    width: 23vw;
+    height: 12.5vw;
+    color: #ffffff;
+    background-color: #1D1D1D;
+    border: solid 0.15vw #ffffff;
+    border-radius: 0.5vw;
+
+    margin-top: -14%;
+    margin-left: 23.5%;
+   
+    z-index: 1;
+}
+
+
+.ms5b {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ms5b h1 {    
+    margin-top: -2vw;
+    font-size: 3.5vw;
+}
+
+
+.ms5t {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 95%;
+    height: 20%;
+    border-bottom: solid 1px #ffffff;
+    margin-left: 0.7vw;
+}
+
+
+.ms5t ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    height: 100%;
+    margin-left: 5vw;
+}
+
+.ms5t ul li {
+    display: flex;
+    margin-right: 0.3vw;
+    list-style-type: none;
+}
+
+
+.ms5t ul li img {
+    width: 1.2vw;
+    height: 1.2vw;
+}
+
+
+/*jQuery*/
+.skill6 {
+    /* 위치를 고정시킵니다 */
+    position: absolute;
+    width: 23vw;
+    height: 12.5vw;
+    color: #ffffff;
+    background-color: #1D1D1D;
+    border: solid 0.15vw #ffffff;
+    border-radius: 0.5vw;
+
+    margin-top: -2%;
+    margin-left: 10%;
+}
+
+
+.ms6b {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.ms6b h1 {    
+    margin-top: -2vw;
+    font-size: 3.5vw;
+}
+
+
+.ms6t {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 95%;
+    height: 20%;
+    border-bottom: solid 1px #ffffff;
+    margin-left: 0.7vw;
+}
+
+
+.ms6t ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    height: 100%;
+    margin-left: 5vw;
+}
+
+.ms6t ul li {
+    display: flex;
+    margin-right: 0.3vw;
+    list-style-type: none;
+}
+
+
+.ms6t ul li img {
+    width: 1.2vw;
+    height: 1.2vw;
+}
+
+
+/*SASS*/
+.skill7 {
+    /* 위치를 고정시킵니다 */
+    position: absolute;
+    width: 23vw;
+    height: 12.5vw;
+    color: #ffffff;
+    background-color: #1D1D1D;
+    border: solid 0.15vw #ffffff;
+    border-radius: 0.5vw;
+
+    margin-top: 2.1%;
+    margin-left: -7.5%;
+}
+
+
+.ms7b {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.ms7b h1 {    
+    margin-top: -2vw;
+    font-size: 3.5vw;
+}
+
+
+.ms7t {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 95%;
+    height: 20%;
+    border-bottom: solid 1px #ffffff;
+    margin-left: 0.7vw;
+}
+
+
+.ms7t ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    height: 100%;
+    margin-left: 5vw;
+}
+
+.ms7t ul li {
+    display: flex;
+    margin-right: 0.3vw;
+    list-style-type: none;
+}
+
+
+.ms7t ul li img {
+    width: 1.2vw;
+    height: 1.2vw;
+}
+
+
+
+/* ---------- section aboutme --------- */
 
 
 #aboutme {
     width: 100%;
-    height: 750px;
-    /* background-color: pink; */
+    height: 45vw;
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -134,43 +652,60 @@ nav ul li:hover {
 }
 
 #aboutme span {
-    width: 15px;
-    height: 15px;
+    width: 0.7vw;
+    height: 0.7vw;
     border-radius: 50%;
     background: #fff;
 }
 
 .about p {
-    font-size: 50px;
+    font-size: 2.7vw;
     font-weight: bold;
 }
 
 .s1 {
     opacity: 25%;
-    margin: 70px 0 40px 0;
+    margin: 4vw 0 2vw 0;
 }
 .s2 {
     opacity: 66%;
-    margin-bottom: 40px;
+    margin-bottom: 2.5vw;
 }
 .s3 {
     opacity: 100%;
-    margin-bottom: 70px;
+    margin-bottom: 4vw;
 }
+
 
 #aboutme ul li {
     list-style: none;
-    font-size: 25px;
+    font-size: 1.25vw;
     line-height: 150%;
+}
+
+
+
+/*---- svg -----*/
+
+
+svg {
+    position: fixed;
+    top: 50%;
+    left: 27%;
+    transform: translate(-50%, -50%);
+    max-width: 50%;
+    max-height: 50%;
+    stroke-dasharray: 0;
+    stroke-dashoffset: 0;
+    transition: stroke-dashoffset 2s linear;
 }
 
 
 /*--section skill-------------------------------------------------*/
 
-#skill {
-    /* background: pink; */
+#importantskill {
     width: 100%;
-    height: 850px;
+    height: 45vw;
     display: inline-flex;
     flex-direction: column;
     justify-content: center;
@@ -182,21 +717,31 @@ nav ul li:hover {
 }
 
 .sk p {
-    font-size: 50px;
+    font-size: 2.7vw;
     font-weight: bold;
-    margin-bottom: 150px;
+    margin-bottom: 10vw;
 }
+
 
 .scrollable-list {
     display: flex; /* 리스트 항목을 가로로 배열한다. */
     /* overflow-x: scroll; */
     white-space: nowrap; /* 리스트 항목이 한 줄에 표시되도록 함 */
     transition: transform 0.5s; /* 스크롤 애니메이션을 부드럽게 적용 */
+ /* 마우스가 요소 위에 있을 때 애니메이션을 멈춥니다. */
+ overflow: hidden;
 }
 
+
+.scrollable-list:hover {
+    /* 마우스가 요소 위에 있을 때 애니메이션을 멈춥니다. */
+    animation-play-state: paused;
+}
+
+
 .scrollable-list li {
-    width: 400px;
-    height: 200px;
+    width: 20vw;
+    height: 10vw;
 
     background: #1D1D1D;
 
@@ -205,49 +750,70 @@ nav ul li:hover {
     align-items: center;
     justify-content: center;
 
-    border: 1px solid #fff;
-    border-radius: 10px;
-    padding: 20px 10px;
-    margin: 0 50px;
+    border: 0.1vw solid #fff;
+    border-radius: 0.5vw;
+    padding: 1vw 0.5vw;
+    margin: 0 2.7vw;
 
-    transform: translateX(247%); /* 초기에 항목을 왼쪽으로 숨김 */
+
+    /* 애니메이션을 부드럽게 적용합니다. */
+    animation: moveLeft 25s linear infinite;
 }
 
+
+@keyframes moveLeft {
+    0% {
+        transform: translateX(400%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
+
+.scrollable-list.paused li {
+    animation-play-state: paused;
+}
+
+
 .scrollable-list li h3 {
-    width: 350px;
+    width: 19vw;
     height: 20%;
-    border-bottom: 1px solid #535353;
+    border-bottom: 0.1vw solid #535353;
     display: flex;
     flex-direction: column;
 }
 
 .scrollable-list li p {
     height: 80%;
-    font-size: 20px;
+    font-size: 1vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
+
+
 /*--section work-------------------------------------------------*/
 
-#work {
-    /* background: pink; */
-    width: 100%;
-    height: 1200px;
 
+#work {
+    width: 100%;
+    height: 80vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
+
 .work p {
-    font-size: 50px;
+    font-size: 2.7vw;
     font-weight: bold;
-    margin-bottom: 30px;
+    margin-bottom: 7vw;
     color: #fff;
 }
+
 
 .w_k {
     display: flex;
@@ -255,139 +821,166 @@ nav ul li:hover {
     width: 80%;
 }
 
+
 .w_k li {
-    width: 600px;
-    height: 300px;
-    padding: 10px;
+    width: 31.25vw;
+    height: 22.7vw;
+    padding: 0.7vw;
     list-style: none;
     position: relative;
 }
+
 
 .w_k li p {
     color: #fff;
 }
 
+
 .w_kp1 {
-    font-size: 30px;
+    font-size: 1.5vw;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 1vw;
 }
+
+
 .w_kp2 {
-    font-size: 20px;
-    margin-bottom: 20px;
+    font-size: 0.9vw;
+    margin-bottom: 1.2vw;
 }
+
 
 .w_k li img {
-    width: 600px;
+    width: 30vw;
 }
 
+
 .w_k li:first-child {
-    margin-left: 100px;
+    margin-left: 5.21vw;
 }
+
+
 .w_k li:nth-child(2) {
     display: flex;
     flex-direction: column;
-    margin-left: 800px;
-    margin-top: -70px;
+    margin-left: 43vw;
+    margin-top: -9vw;
 }
+
+
 .w_k li:nth-child(3) {
-    margin-left: 100px;
-    margin-top: -70px;
+    margin-left: 5.22vw;
+    margin-top: -7vw;
 }
+
 
 /*--section contact-------------------------------------------------*/
 
+
 #contact {
-        /* background: pink; */
-        width: 100%;
-        height: 1080px;
-    
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        color: #fff;
-}
+    width: 100%;
+    height: 47vw;
 
-.ct p {
-    font-size: 50px;
-    font-weight: bold;
-    margin-bottom: 100px;
-}
-
-.ct_contents {
     display: flex;
-    justify-content: space-between;
-    width: 70%;
-}
-
-.ct_contentsleft {
-    width: 50%;
-    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-.ct_contentsleft p {
-    font-size: 23px;
-    line-height: 150%;
-}
-
-.ct_contentsright {
-    width: 50%;
-}
-
-.ct_contentsright ul {
-    padding: 0 30px;
-}
-
-.ct_contentsright ul li {
-    list-style: none;
-    margin: 20px 0;
-    font-size: 30px;
-}
-
-.email {
-    width: 600px;
-    height: 40px;
-    background: black;
-    border-bottom: 1px solid #fff;
-    margin-top: 20px;
-}
-
-.message {
-    width: 600px;
-    height: 40px;
-    background: black;
-    border-bottom: 1px solid #fff;
-    margin-top: 20px;
-}
-
-.btn {
-    width: 100px;
-    height: 40px;
-    margin-left: 1170px;
-    background: black;
-    border: solid 1px #fff;
-    border-radius: 5px;
     color: #fff;
 }
+
+
+.ct p {
+font-size: 2.7vw;
+font-weight: bold;
+margin-bottom: 7vw;
+}
+
+
+.ct_contents {
+display: flex;
+justify-content: space-between;
+width: 70%;
+}
+
+
+.ct_contentsleft {
+width: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+
+.ct_contentsleft p {
+font-size: 1.3vw;
+line-height: 200%;
+}
+
+
+.ct_contentsright {
+width: 50%;
+}
+
+
+.ct_contentsright ul {
+padding: 0 2vw;
+}
+
+
+.ct_contentsright ul li {
+list-style: none;
+margin: 1.2vw 0;
+font-size: 1.2vw;
+}
+
+
+.email {
+width: 31.24vw;
+height: 2.2vw;
+background: black;
+border-bottom:0.1vw solid #fff;
+margin-top: 1.3vw;
+}
+
+
+.message {
+width: 31.24vw;
+height: 2.2vw;
+background: black;
+border-bottom: 0.1vw solid #fff;
+margin-top: 1.3vw;
+}
+
+
+.btn {
+width: 5.24vw;
+height: 2vw;
+margin-left: 60.76vw;
+background: black;
+border: solid 0.1vw #fff;
+border-radius: 0.5vw;
+color: #fff;
+}
+
+
 .btn:hover {
-    background: #fff;
-    border: solid 1px black;
-    color: black;
+background: #fff;
+border: solid 0.1vw black;
+color: black;
 } 
+
 
 /*--footer-------------------------------------------------*/
 
+
 footer {
     width: 100%;
-    height: 200px;
+    height: 12vw;
     display: flex;
-    border-top: 1px solid #fff;
+    border-top: 0.1vw solid #fff;
     color: #fff;
     justify-content: space-between;
 }
+
 
 footer ul {
     display: flex;
@@ -395,11 +988,14 @@ footer ul {
     flex-direction: column;
     align-items:flex-end;
     justify-content: center;
-    margin: 0 140px;
+    margin: 0 7.4vw;
 }
+
+
 footer ul li {
     line-height: 150%;
 }
+
 
 .logo2 {
     display: flex;
@@ -407,24 +1003,27 @@ footer ul li {
     justify-content: center;
     align-items: center;
     width: 20%;
-    margin-left: -17px;
+    margin-left: -0.8vw;
 }
 
+
 .logo2 a {
-    padding: 0 20px;
+    padding: 0 1vw;
     width: 20%;
     font-weight: bold;
 }
 
+
 .logo2 span {
-    width: 1px;
-    border: 2.9px solid rgb(255, 255, 255);
-    margin-top: -9px;
-    margin-left: 15px;
+    width: 0.1vw;
+    border: 0.11vw solid rgb(255, 255, 255);
+    margin-top: -0.5vw;
+    margin-left: 1.5vw;
 }
 
+
 .logo2:hover span {
-    width: 100px;
+    width: 5vw;
     transition: all 0.2s ease;
-    margin-left: 110px;
+    margin-left: 5.5vw;
 }
