--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,20 @@
+@font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Pretendard-Regular';
 } 
 
 body {
     background: black;
     overflow-x: hidden;
-    height: 279vw; /* 전체 body의 높이 */
+    height: 229vw; /* 전체 body의 높이 */
 }
 
 /* 아래의 모든 코드는 영역::코드로 사용 */
@@ -55,6 +63,13 @@ a {
     border-radius: 6vw;
     border: 0.1vw solid #ffffff;
     background-color: transparent;
+}
+
+#topBtn:hover {
+    color: #DDFF21;
+    border: 0.2vw solid #DDFF21;
+    transition: all 1s ease;
+    background-color: #ffffff12;
 }
 
 
@@ -126,8 +141,7 @@ nav ul li {
 }
 
 nav ul li:hover {
-    font-weight: bold;
-    text-decoration: line-through;
+    color: #DDFF21;
 }
 
 
@@ -186,6 +200,8 @@ nav ul li:hover {
 
     margin-top: -17%;
     margin-left: -47%;
+    /* transition을 추가하여 부드러운 애니메이션 효과를 줍니다 */
+    transition: width 0.5s, height 0.5s, font-size 0.5s; 
 }
 
 
@@ -260,6 +276,8 @@ nav ul li:hover {
 
     margin-top: -3%;
     margin-left: -35%;
+    /* transition을 추가하여 부드러운 애니메이션 효과를 줍니다 */
+    transition: width 0.5s, height 0.5s, font-size 0.5s; 
 }
 
 
@@ -322,7 +340,7 @@ nav ul li:hover {
     border: solid 0.15vw #ffffff;
     border-radius: 0.5vw;
 
-    margin-top: -32%;
+    margin-top: -31%;
     margin-left: -25%;
      /* transition을 추가하여 부드러운 애니메이션 효과를 줍니다 */
      transition: width 0.5s, height 0.5s, font-size 0.5s; 
@@ -392,6 +410,8 @@ nav ul li:hover {
     margin-left: 1.3%;
 
     z-index: 2;
+    /* transition을 추가하여 부드러운 애니메이션 효과를 줍니다 */
+    transition: width 0.5s, height 0.5s, font-size 0.5s; 
 }
 
 
@@ -458,6 +478,8 @@ nav ul li:hover {
     margin-left: 23.5%;
    
     z-index: 1;
+    /* transition을 추가하여 부드러운 애니메이션 효과를 줍니다 */
+    transition: width 0.5s, height 0.5s, font-size 0.5s; 
 }
 
 
@@ -521,6 +543,8 @@ nav ul li:hover {
 
     margin-top: -2%;
     margin-left: 10%;
+    /* transition을 추가하여 부드러운 애니메이션 효과를 줍니다 */
+    transition: width 0.5s, height 0.5s, font-size 0.5s; 
 }
 
 
@@ -585,6 +609,8 @@ nav ul li:hover {
 
     margin-top: 2.1%;
     margin-left: -7.5%;
+    /* transition을 추가하여 부드러운 애니메이션 효과를 줍니다 */
+    transition: width 0.5s, height 0.5s, font-size 0.5s; 
 }
 
 
@@ -636,26 +662,39 @@ nav ul li:hover {
 }
 
 
+/* 초깃값으로 배경색을 숨김 */
+.skill4 .s4, .skill4 .b4, .skill4 .c4 {
+    background-color: transparent;
+    transition: background-color 0.5s ease-in-out;
+}
+
+/* 애니메이션 클래스 추가 */
+.skill4 .s4.active {
+    background-color: #929292; /* 색상을 여기에 지정하세요 */
+}
+
+.skill4 .b4.active {
+    background-color: #929292; /* 색상을 여기에 지정하세요 */
+}
+
+.skill4 .c4.active {
+    background-color: #929292; /* 색상을 여기에 지정하세요 */
+}
+
 
 /* ---------- section aboutme --------- */
 
 
 #aboutme {
     width: 100%;
-    height: 45vw;
+    height: 25vw;
     color: #fff;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-}
-
-#aboutme span {
-    width: 0.7vw;
-    height: 0.7vw;
-    border-radius: 50%;
-    background: #fff;
+    margin-top: 10vw;
 }
 
 .about p {
@@ -663,21 +702,8 @@ nav ul li:hover {
     font-weight: bold;
 }
 
-.s1 {
-    opacity: 25%;
-    margin: 4vw 0 2vw 0;
-}
-.s2 {
-    opacity: 66%;
-    margin-bottom: 2.5vw;
-}
-.s3 {
-    opacity: 100%;
-    margin-bottom: 4vw;
-}
-
-
 #aboutme ul li {
+    margin-top: 12vw;
     list-style: none;
     font-size: 1.25vw;
     line-height: 150%;
@@ -685,112 +711,16 @@ nav ul li:hover {
 
 
 
+
 /*---- svg -----*/
 
 
 svg {
-    position: fixed;
-    top: 50%;
-    left: 27%;
+    position: absolute;
+    top: 30%;
+    left: 28%;
     transform: translate(-50%, -50%);
-    max-width: 50%;
-    max-height: 50%;
-    stroke-dasharray: 0;
-    stroke-dashoffset: 0;
-    transition: stroke-dashoffset 2s linear;
-}
-
-
-/*--section skill-------------------------------------------------*/
-
-#importantskill {
-    width: 100%;
-    height: 45vw;
-    display: inline-flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: #fff;
-
-    overflow: hidden;
-}
-
-.sk p {
-    font-size: 2.7vw;
-    font-weight: bold;
-    margin-bottom: 10vw;
-}
-
-
-.scrollable-list {
-    display: flex; /* 리스트 항목을 가로로 배열한다. */
-    /* overflow-x: scroll; */
-    white-space: nowrap; /* 리스트 항목이 한 줄에 표시되도록 함 */
-    transition: transform 0.5s; /* 스크롤 애니메이션을 부드럽게 적용 */
- /* 마우스가 요소 위에 있을 때 애니메이션을 멈춥니다. */
- overflow: hidden;
-}
-
-
-.scrollable-list:hover {
-    /* 마우스가 요소 위에 있을 때 애니메이션을 멈춥니다. */
-    animation-play-state: paused;
-}
-
-
-.scrollable-list li {
-    width: 20vw;
-    height: 10vw;
-
-    background: #1D1D1D;
-
-    display: inline-flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    border: 0.1vw solid #fff;
-    border-radius: 0.5vw;
-    padding: 1vw 0.5vw;
-    margin: 0 2.7vw;
-
-
-    /* 애니메이션을 부드럽게 적용합니다. */
-    animation: moveLeft 25s linear infinite;
-}
-
-
-@keyframes moveLeft {
-    0% {
-        transform: translateX(400%);
-    }
-    100% {
-        transform: translateX(-100%);
-    }
-}
-
-
-.scrollable-list.paused li {
-    animation-play-state: paused;
-}
-
-
-.scrollable-list li h3 {
-    width: 19vw;
-    height: 20%;
-    border-bottom: 0.1vw solid #535353;
-    display: flex;
-    flex-direction: column;
-}
-
-.scrollable-list li p {
-    height: 80%;
-    font-size: 1vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    opacity: 0;
 }
 
 
@@ -804,6 +734,7 @@ svg {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 10vw;
 }
 
 
@@ -828,12 +759,27 @@ svg {
     padding: 0.7vw;
     list-style: none;
     position: relative;
+    opacity: 1;
 }
 
 
 .w_k li p {
     color: #fff;
 }
+
+.w_k li img {
+    width: 100%;
+    height: auto;
+    padding: 0.4vw;
+    border: 1px solid transparent; /* 초기에 투명한 테두리 설정 */
+    transition: border 0.5s ease-in-out; /* 테두리 색상 변화에 대한 전환 효과 설정 */
+}
+
+.w_k li:hover img {
+    border-color: #DDFF21; /* 호버 시 테두리 색상 변경 */
+    transform: rotate(360deg); /* 호버 시 이미지를 360도 회전 */
+}
+
 
 
 .w_kp1 {
@@ -873,6 +819,309 @@ svg {
 }
 
 
+
+#wk1_modal {
+    display: none;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 90%;
+    height: 90vh;
+    background: rgba(53, 53, 53, 0.946);
+    z-index: 5;
+    color: #ffffff;
+    margin-bottom: 80vw;
+    margin-left: 5vw;
+    border-radius: 1vw;
+    border: 0.15vw solid #717171;
+
+    overflow-y: auto;
+    scrollbar-width: none; /* Firefox를 위한 스크롤바 숨김 */
+    -ms-overflow-style: none; /* IE/Edge를 위한 스크롤바 숨김 */
+}
+
+
+/* WebKit 기반 브라우저에서 스크롤바를 숨깁니다. */
+#wk1_modal::-webkit-scrollbar {
+    display: none;
+  }
+
+
+  #wk2_modal {
+    display: none;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 90%;
+    height: 90vh;
+    background: rgba(53, 53, 53, 0.946);
+    z-index: 5;
+    color: #ffffff;
+    margin-bottom: 80vw;
+    margin-left: 5vw;
+    border-radius: 1vw;
+    border: 0.15vw solid #717171;
+
+    overflow-y: auto;
+    scrollbar-width: none; /* Firefox를 위한 스크롤바 숨김 */
+    -ms-overflow-style: none; /* IE/Edge를 위한 스크롤바 숨김 */
+}
+
+
+/* WebKit 기반 브라우저에서 스크롤바를 숨깁니다. */
+#wk2_modal::-webkit-scrollbar {
+    display: none;
+  }
+
+
+
+  #wk3_modal {
+    display: none;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 90%;
+    height: 90vh;
+    background: rgba(53, 53, 53, 0.946);
+    z-index: 5;
+    color: #ffffff;
+    margin-bottom: 80vw;
+    margin-left: 5vw;
+    border-radius: 1vw;
+    border: 0.15vw solid #717171;
+
+    overflow-y: auto;
+    scrollbar-width: none; /* Firefox를 위한 스크롤바 숨김 */
+    -ms-overflow-style: none; /* IE/Edge를 위한 스크롤바 숨김 */
+}
+
+
+/* WebKit 기반 브라우저에서 스크롤바를 숨깁니다. */
+#wk3_modal::-webkit-scrollbar {
+    display: none;
+  }
+
+
+#wk1_modal.active {
+    visibility: visible;
+}
+
+#wk2_modal.active {
+    visibility: visible;
+}
+
+#wk3_modal.active {
+    visibility: visible;
+}
+
+
+#wk1_modal .wkm1 {
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5vw 3vw;
+    width: 90%;
+    margin-left: 1.4vw;
+    border-bottom: 0.1vw solid #989898;
+    align-items: center;
+}
+
+#wk2_modal .wkm1 {
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5vw 3vw;
+    width: 90%;
+    margin-left: 1.4vw;
+    border-bottom: 0.1vw solid #989898;
+    align-items: center;
+}
+
+#wk3_modal .wkm1 {
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5vw 3vw;
+    width: 90%;
+    margin-left: 1.4vw;
+    border-bottom: 0.1vw solid #989898;
+    align-items: center;
+}
+
+
+#wk1_modal .wkm1_content {
+    display: flex;
+    padding: 3vw;
+}
+
+#wk2_modal .wkm1_content {
+    display: flex;
+    padding: 3vw;
+}
+
+#wk3_modal .wkm1_content {
+    display: flex;
+    padding: 3vw;
+}
+
+
+.wkm1_content ul {
+    padding: 3vw 0 0 4vw;
+}
+
+.wkm1_content ul li {
+    list-style-type: none;
+    margin-bottom: 3.5vw;
+    font-size: 1.2vw;
+}
+
+
+
+.wkm1_content ul li:nth-of-type(4) {
+    display: flex;
+    margin-top: 5.7vw;
+}
+
+
+.wkm1_content ul li:nth-of-type(4) p {
+    border: 0.1vw solid #ffffff;
+    padding: 0.4vw 1vw;
+    margin: 0 0.5vw 0 0;
+    border-radius: 1vw;
+}
+
+.wkm1_content ul li:nth-of-type(4) p:hover {
+    color: #DDFF21;
+    background-color: #707070;
+}
+
+
+.wkm1_content ul li:nth-of-type(5) {
+    position: absolute;
+    right: 0;
+    margin-right: 7.2vw;
+    background-color: #1D1D1D;
+    padding: 0.5vw 0.8vw;
+    border-radius: 1.5vw;
+    font-weight: bold;
+    transition: all 0.7s ease;
+}
+
+#wk2_modal .wkm1_content ul li:nth-of-type(5) {
+    position: absolute;
+    right: 0;
+    margin-top: -2.2vw;
+    margin-right: 7.2vw;
+    background-color: #1D1D1D;
+    padding: 0.5vw 0.8vw;
+    border-radius: 1.5vw;
+    font-weight: bold;
+    transition: all 0.7s ease;
+}
+
+.wkm1_content ul li:nth-of-type(5):hover {
+    color: #1D1D1D;
+    font-weight: bold;
+    background-color: #ffffff;
+}
+
+
+#wk2_modal .wkm1_content ul li:nth-of-type(5):hover {
+    color: #1D1D1D;
+    font-weight: bold;
+    background-color: #ffffff;
+}
+
+
+.wkm1_c1 {
+    font-size: 1.2vw;
+    text-align: center;
+    line-height: 200%;
+}
+
+
+.wkm1_content2 {
+    margin-top: 4vw;
+    margin-left: 3vw;
+    margin-bottom: 5vw;
+}
+
+.wkm1_content2 .wkm1_test {
+    display: flex;
+    margin-top: 3vw;
+    align-items: center;
+    justify-content: center;
+}
+
+.wkm1_content2 h2 {
+    margin-left: 4vw;
+}
+
+#wk1_modal .wkm1_test img {
+    width: 20vw;
+}
+
+
+#wk2_modal p {
+    margin-bottom: 3vw;
+}
+
+
+#wk3_modal p {
+    margin-bottom: 3vw;
+}
+
+.wkm1_test p {
+    font-size: 1vw;
+    margin-left: 5vw;
+    line-height: 200%;
+}
+
+
+#wk1_modal img {
+    width: 50vw;
+}
+
+#wk2_modal img {
+    width: 50vw;
+}
+
+#wk3_modal img {
+    width: 50vw;
+}
+
+#wk1_modal button {
+    position: absolute;
+    top: 1.2vw;
+    right: 1.5vw;
+    background: transparent;
+    border: none;
+    font-size: 2rem;
+    color: #fff;
+    cursor: pointer;
+}
+
+
+#wk2_modal button {
+    position: absolute;
+    top: 1.2vw;
+    right: 1.5vw;
+    background: transparent;
+    border: none;
+    font-size: 2rem;
+    color: #fff;
+    cursor: pointer;
+}
+
+#wk3_modal button {
+    position: absolute;
+    top: 1.2vw;
+    right: 1.5vw;
+    background: transparent;
+    border: none;
+    font-size: 2rem;
+    color: #fff;
+    cursor: pointer;
+}
+
+
 /*--section contact-------------------------------------------------*/
 
 
@@ -885,6 +1134,7 @@ svg {
     align-items: center;
     justify-content: center;
     color: #fff;
+    
 }
 
 
@@ -911,13 +1161,17 @@ justify-content: center;
 
 
 .ct_contentsleft p {
-font-size: 1.3vw;
+font-size: 1vw;
 line-height: 200%;
+color: gray; /* 기본 텍스트 색상 */
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 
 .ct_contentsright {
 width: 50%;
+margin-left: 5vw;
 }
 
 
@@ -928,8 +1182,35 @@ padding: 0 2vw;
 
 .ct_contentsright ul li {
 list-style: none;
-margin: 1.2vw 0;
+margin-top: 1.8vw;
 font-size: 1.2vw;
+line-height: 200%;
+}
+
+.ct_contentsright ul li:nth-of-type(2) {
+    color: #989898;
+}
+.ct_contentsright ul li:nth-of-type(3) {
+    color: #989898;
+}
+.ct_contentsright ul li:nth-of-type(4) {
+    color: #989898;
+}
+
+.ct_contentsright ul li:nth-of-type(2):hover {
+    color: #ffffff;
+}
+.ct_contentsright ul li:nth-of-type(3):hover {
+    color: #ffffff;
+}
+.ct_contentsright ul li:nth-of-type(4):hover {
+    color: #ffffff;
+}
+
+.ct_contentsright p {
+    margin-top: 3vw;
+    color: #6e6e6e;
+    font-weight: bold;
 }
 
 
@@ -967,6 +1248,11 @@ background: #fff;
 border: solid 0.1vw black;
 color: black;
 } 
+
+
+#copyField {
+    display: none;
+}
 
 
 /*--footer-------------------------------------------------*/
@@ -1018,7 +1304,7 @@ footer ul li {
     width: 0.1vw;
     border: 0.11vw solid rgb(255, 255, 255);
     margin-top: -0.5vw;
-    margin-left: 1.5vw;
+    margin-left: 0.8vw;
 }
 
 
